manifest.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ovpn
spec:
  type: NodePort
  selector:
    app: ovpn
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ovpn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ovpn
  template:
    metadata:
      labels:
        app: ovpn
    spec:
      containers:
      - name: ovpn
        image: hugo19941994/ovpn
        ports:
        - containerPort: 8000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ovpn-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ovpn.hfs.dev
    secretName: ovpn-tls
  rules:
  - host: ovpn.hfs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ovpn
            port:
              number: 80
